--- a/script/build
+++ b/script/build
@@ -2,13 +2,13 @@
 
 # cd ~/dev/glsdsp-samebatch-supplychain/trunk/
 
-export ROOT_DIR=.
-export CLASS_DIR=$ROOT_DIR/bin
+export ROOT_DIR=..
+export CLASS_DIR=$ROOT_DIR/src
 export CLASSPATH=$CLASS_DIR
-export SRC="src/*.java src/gproblem/*.java src/gsolution/*.java src/gsolver/*.java src/gio/*.java"
+export SRC="../src/*.java ../src/gproblem/*.java ../src/gsolution/*.java ../src/gsolver/*.java ../src/gio/*.java"
 
-echo javac -Xlint -nowarn -d $CLASS_DIR $SRC 
-javac -Xlint -nowarn -d $CLASS_DIR $SRC 
+echo javac -Xlint -nowarn -d $CLASS_DIR $SRC
+javac -Xlint -nowarn -d $CLASS_DIR $SRC
 
 echo FIN DU SCRIPT
 
